yyamamoto+sesetup@salesforce.com/src/objects/CustomObject5__c.object
<CustomObject>
    <fields>
        <fullName>Field2__c</fullName>
        <label>案件</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Keihis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>経費科目</label>
        <picklist>
            <picklistValues>
                <fullName>収入印紙代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>予納郵券代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>記録謄写費用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>コピー代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>交通費</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>通信費</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宿泊料</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>保管金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>供託金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>保証金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field4__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TASKID__c</fullName>
        <label>活動ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>実費</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>Field7__c</columns>
        <columns>Field6__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>A{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>経費番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>